Delete mapped to backspace and bug in alignment to canvas fixed

--- a/src/App.css
+++ b/src/App.css
@@ -142,19 +142,20 @@
 .canvas-section .canvas .machine-inner .machine-bed {
     position: relative;
     padding: 5rem 7rem 9rem 4rem;
-    background-color: #dddddd;
+    background-color: #ffffff;
     box-shadow: inset -1px 0px 14px 1px #0000006b;
     border-top-left-radius: 2rem;
     border-top-right-radius: 2rem;
 }
 .canvas-section .canvas .machine-bed .machine-bed-outer {
     position: relative;
-    border: 4px dashed #0000001f;
+    border: 3px dashed #8888888c;
+    padding: 3px;
 }
 .canvas-section .canvas .machine-bed .machine-bed-outer .lt-corner {
     position: absolute;
-    left: -10px;
-    top: -10px;
+    left: -8px;
+    top: -8px;
     width: 7rem;
     height: 7rem;
     z-index: 0;
@@ -163,8 +164,8 @@
 }
 .canvas-section .canvas .machine-bed .machine-bed-outer .rt-corner {
     position: absolute;
-    right: -10px;
-    top: -10px;
+    right: -8px;
+    top: -8px;
     width: 7rem;
     height: 7rem;
     z-index: 0;
@@ -173,8 +174,8 @@
 }
 .canvas-section .canvas .machine-bed .machine-bed-outer .lb-corner {
     position: absolute;
-    left: -10px;
-    bottom: -10px;
+    left: -8px;
+    bottom: -8px;
     width: 7rem;
     height: 7rem;
     z-index: 0;
@@ -183,8 +184,8 @@
 }
 .canvas-section .canvas .machine-bed .machine-bed-outer .rb-corner {
     position: absolute;
-    right: -10px;
-    bottom: -10px;
+    right: -8px;
+    bottom: -8px;
     width: 7rem;
     height: 7rem;
     z-index: 0;
@@ -218,7 +219,7 @@
     height: 0;
     border-top: 0px solid transparent;
     border-bottom: 70px solid transparent;
-    border-left: 70px solid #dddddd;
+    border-left: 70px solid #ffffff;
 }
 .canvas-section .canvas .machine-inner .machine-bed .triangle-right {
     position: absolute;
@@ -229,7 +230,7 @@
     height: 0;
     border-top: 0px solid transparent;
     border-bottom: 70px solid transparent;
-    border-right: 70px solid #dddddd;
+    border-right: 70px solid #ffffff;
 }
 
 .canvas-section .canvas .machine-inner .machine-bed::after {
